Fixed hover effect on restaraunt cards pages. Card descriptions now cut off as ellipses when text overflows. Also changed logo titles on each page to be the actual image svg file provided

--- a/css/style.css
+++ b/css/style.css
@@ -377,6 +377,7 @@ body {
 .header {
   display: flex;
   justify-content: center;
+  margin-bottom: 25px;
 }
 
 .nav {
@@ -710,25 +711,41 @@ body {
   justify-content: space-between;
   padding: 15px 13px;
   width: calc(100% + 70px);
+  transition: 0.5s;
 }
 .food-option .content:hover {
   width: calc(100% + 0px);
 }
+.food-option .content:hover .checkmark i {
+  transform: rotate(2turn);
+  transition: transform 0.5s;
+}
+.food-option .content .food-text {
+  flex: 1;
+  overflow: hidden;
+}
 .food-option .content h3 {
-  margin: 0px auto 5px auto;
+  margin: 0px 0px 5px 0px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .food-option .content p {
   margin: 0px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .food-option .content .food-option__cost {
   font-weight: 600;
-  margin-left: auto;
+  margin-left: 10px;
   align-self: flex-end;
 }
 .food-option .content .checkmark {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 18px;
   background-color: #99E2D0;
   margin: -15px 0px;
   width: 70px;
@@ -741,8 +758,8 @@ body {
   color: #99E2D0;
   background: #fff;
   border-radius: 20px;
-  width: 15px;
-  height: 15px;
+  width: 25px;
+  height: 25px;
   padding: 11px;
 }
 .food-option .content .checkmark i::before {
