--- a/sass/main.scss
+++ b/sass/main.scss
@@ -75,6 +75,7 @@ body {
 .header {
     display: flex;
     justify-content: center;
+    margin-bottom: 25px;
 }
 
 .nav {
@@ -425,22 +426,39 @@ body {
         justify-content: space-between;
         padding: 15px 13px;
         width: calc(100% + 70px);
+        transition: .5s;
 
         &:hover {
             width: calc(100% + 0px);
+
+            .checkmark i {
+                transform: rotate(2turn);
+                transition: transform .5s;
+            }
+        }
+
+        .food-text {
+            flex: 1;
+            overflow: hidden;
         }
 
         h3 {
-            margin: 0px auto 5px auto;
+            margin: 0px 0px 5px 0px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         p {
             margin: 0px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         .food-option__cost {
             font-weight: 600;
-            margin-left: auto;
+            margin-left: 10px;
             align-self: flex-end;
         }
 
@@ -448,6 +466,7 @@ body {
             display: flex;
             justify-content: center;
             align-items: center;
+            font-size: 18px;
             background-color: map-get($color-scheme, color-tertiary);
             margin: -15px 0px;
             width: 70px;
@@ -460,8 +479,8 @@ body {
                 color: map-get($color-scheme, color-tertiary);
                 background: map-get($color-scheme, color-white);
                 border-radius: 20px;
-                width: 15px;
-                height: 15px;
+                width: 25px;
+                height: 25px;
                 padding: 11px;
 
                 &::before {
